--- a/index.html
+++ b/index.html
@@ -95,8 +95,6 @@
 						</div>
 					</div>
 					<!-- End Second row of features -->
-
-					<!-- Tipp: Du kannst so viele Reihen erstellen, wie du willst. -->
 				</section>
 				<!-- End about section -->
 
@@ -330,7 +328,7 @@
 				<!-- Third Banner -->
 				<section id="banner3" class="parallax">
 					<h1>DU HAST NOCH FRAGEN?</h1>
-					<h2>KONTAKTIERE UNS VIA EMAIL: <i><a href="mailto:frozencraft204@gmail.com">frozencraft204@gmail.com</a></i></h2>
+					<h2>KONTAKTIERE UNS VIA EMAIL: <i><a href="mailto:slinicraftet204@chaos-craft.de">slinicraftet204@chaos-craft.de</a></i></h2>
 							<h2>ODER KONTAKTIERE UNS AUF UNSEREM DISCORD <i><a href="https://discord.gg/jaybyaR">https://discord.gg/jaybyaR</a></i></h2>
 				</section>
 				<!-- End Third Section -->
